--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>01,alicia,1A</h1>
+    <p>eu adoro dormir ate tarde <strong>mas eu nao gotso de dormir cedo</strong></p>
+    <p>adoro cookies</p>
+    <h2>sanrio</h2>
+    <p>agua <strong>nao e seca</strong></p>
+    <h3>minhas cinco comidas favoritas</h3>
+    <li>strogonoff</li>
+    <li>jujubas</li>
+    <li>lasanha</li>
+    <li>carne de panela com arroz</li>
+    <li>chocolate meio amargo</li>
+    <img src="" alt="">
 </body>
 </html>
